# web-utils

./: .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  tox.ini
converter/: abc_converter.py  ast.py  converter.py
converter/csv/: csv_converter.py
converter/json/: __init__.py  json_converter.py
converter/xml/: xml_converter.py
converter/yaml/: __init__.py  yaml_converter.py
docs/: example.ipynb  requirements.txt
email_utils/: __init__.py  email_validator.py  simple_mailer.py
network/: __init__.py
network/dns/: __init__.py
network/icmp/: __init__.py  icmp_proto.py  ping.py  ping_utils.py  response.py  traceroute.py
network/speedtest/: __init__.py  speed_test.py
parser/: __init__.py  scraper.py
qr/: __init__.py  qr_generator.py
qr/generator/: encoder.py  error_correction.py  qr_generator.py  version_selector.py
qr/reader/: qr_reader.py
src/webutils/converter/: abc_converter.py  ast.py
src/webutils/email_utils/: __init__.py  simple_mailer.py
tests/: dns_lookup_test.py  email_validator_test.py  icmp_utils_test.py  ping_test.py  ping_utils_test.py  simple_mailer_test.py  speedtest_test.py  traceroute_test.py
tests/converter/: csv_converter_test.py  json_converter_test.py  xml_converter_test.py  yaml_converter_test.py
tests/email_utils/: email_validator_test.py  simple_mailer_test.py
tests/network/: dns_lookup_test.py  icmp_utils_test.py  ping_test.py  speedtest_test.py  traceroute_test.py
tests/parser/: scraper_test.py
tests/qr/: qr_generator_test.py  qr_reader_test.py
(+18 files in other folders)
